--- a/packages/rettangoli-ui/vt/specs/primitives/dialog/size-lg.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/dialog/size-lg.html
@@ -3,7 +3,7 @@ title: "Size Large"
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="w">
   <rtgl-button id="button">Open Dialog s=lg</rtgl-button>
-  <rtgl-dialog id="dialog" s="lg">
+  <rtgl-dialog id="dialog" open s="lg">
     <rtgl-view slot="content" g="md">
       <rtgl-text s="lg">Large Dialog</rtgl-text>
       <rtgl-text c="mu">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</rtgl-text>
@@ -14,11 +14,11 @@ title: "Size Large"
 <script>
   const button = document.getElementById('button');
   const dialog = document.getElementById('dialog');
-  
+
   button.addEventListener('click', () => {
     dialog.setAttribute('open', '');
   });
-  
+
   // Listen for dialog close events (overlay click or ESC key)
   dialog.addEventListener('close', () => {
     dialog.removeAttribute('open');
