--- a/packages/rettangoli-ui/vt/specs/primitives/dialog/size-md.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/dialog/size-md.html
@@ -1,11 +1,11 @@
 ---
-title: "Size Small"
+title: "Size Medium"
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="w">
-  <rtgl-button id="button">Open Dialog s=sm</rtgl-button>
-  <rtgl-dialog id="dialog" s="sm">
+  <rtgl-button id="button">Open Dialog s=md</rtgl-button>
+  <rtgl-dialog id="dialog" open s="md">
     <rtgl-view slot="content" g="md">
-      <rtgl-text s="lg">Small Dialog</rtgl-text>
+      <rtgl-text s="lg">Medium Dialog</rtgl-text>
       <rtgl-text c="mu">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</rtgl-text>
     </rtgl-view>
   </rtgl-dialog>
@@ -14,11 +14,11 @@ title: "Size Small"
 <script>
   const button = document.getElementById('button');
   const dialog = document.getElementById('dialog');
-  
+
   button.addEventListener('click', () => {
     dialog.setAttribute('open', '');
   });
-  
+
   // Listen for dialog close events (overlay click or ESC key)
   dialog.addEventListener('close', () => {
     dialog.removeAttribute('open');
