--- a/packages/rettangoli-ui/vt/specs/primitives/button/button-icon-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/button/button-icon-01.html
@@ -8,8 +8,10 @@ title: Icon
     <rtgl-button icon="text" v="pr">Button</rtgl-button>
     <rtgl-button icon="text" v="se"></rtgl-button>
     <rtgl-button icon="text" v="se">Button</rtgl-button>
-    <rtgl-button icon="text" s="sm">Button</rtgl-button>
-    <rtgl-button icon="text" s="lg">Button</rtgl-button>
+    <rtgl-button icon="text" ip="s" s="sm">Left Icon</rtgl-button>
     <rtgl-button icon="text" ip="s">Left Icon</rtgl-button>
+    <rtgl-button icon="text" ip="s" s="lg">Left Icon</rtgl-button>
+    <rtgl-button icon="text" s="sm">Right Icon</rtgl-button>
     <rtgl-button icon="text">Right Icon</rtgl-button>
+    <rtgl-button icon="text" s="lg">Right Icon</rtgl-button>
 </rtgl-view>
