feat implement test structure

--- a/packages/rettangoli-ui/vt/specs/primitives/dialog/open.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/dialog/open.html
@@ -1,9 +1,13 @@
 ---
 title: "Open"
+instructions:
+  - click 80 40
+  - wait 500
+  - screenshot open
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="w">
   <rtgl-button id="button">Open Dialog</rtgl-button>
-  <rtgl-dialog id="dialog" open>
+  <rtgl-dialog id="dialog">
     <rtgl-view slot="content" g="md">
       <rtgl-text s="lg">Dialog Content</rtgl-text>
       <rtgl-text c="mu">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</rtgl-text>
