fix: screenshot only when command

--- a/packages/rettangoli-ui/vt/specs/primitives/dialog/open.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/dialog/open.html
@@ -3,7 +3,7 @@ title: "Open"
 instructions:
   - click 80 40
   - wait 500
-  - screenshot open
+  - screenshot
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="w">
   <rtgl-button id="button">Open Dialog</rtgl-button>
