--- a/packages/rettangoli-ui/vt/specs/primitives/dialog/size-md.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/dialog/size-md.html
@@ -3,6 +3,7 @@ title: "Size Medium"
 instructions:
   - click 80 40
   - wait 500
+  - screenshot
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="w">
   <rtgl-button id="button">Open Dialog s=md</rtgl-button>
