use remove extenstion and stuf

--- a/packages/rettangoli-ui/vt/specs/primitives/dialog/size-lg.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/dialog/size-lg.html
@@ -3,7 +3,7 @@ title: "Size Large"
 instructions:
   - click 80 40
   - wait 500
-  - screenshot open
+  - screenshot
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="w">
   <rtgl-button id="button">Open Dialog s=lg</rtgl-button>
