--- a/packages/rettangoli-ui/vt/specs/primitives/dialog/basic.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/dialog/basic.html
@@ -1,5 +1,9 @@
 ---
 title: "Basic"
+instructions:
+  - click 80 40
+  - wait 500
+  - screenshot
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="w">
   <rtgl-button id="button">Open Dialog</rtgl-button>
