--- a/packages/rettangoli-ui/vt/specs/primitives/dialog/size-lg.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/dialog/size-lg.html
@@ -1,13 +1,9 @@
 ---
 title: "Size Large"
-instructions:
-  - click 80 40
-  - wait 500
-  - screenshot
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="w">
   <rtgl-button id="button">Open Dialog s=lg</rtgl-button>
-  <rtgl-dialog id="dialog" s="lg">
+  <rtgl-dialog id="dialog" open s="lg">
     <rtgl-view slot="content" g="md">
       <rtgl-text s="lg">Large Dialog</rtgl-text>
       <rtgl-text c="mu">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</rtgl-text>
