--- a/packages/rettangoli-ui/vt/specs/primitives/dialog/test.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/dialog/test.html
@@ -1,9 +1,13 @@
 ---
 title: "Size Medium"
+instructions:
+  - click 80 40
+  - wait 500
+  - screenshot
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="w">
   <rtgl-button id="button">Open Dialog s=md</rtgl-button>
-  <rtgl-dialog id="dialog" open s="md">
+  <rtgl-dialog id="dialog" s="md">
     <rtgl-view slot="content" g="md">
       <rtgl-text s="lg">Medium Dialog</rtgl-text>
       <rtgl-text c="mu">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</rtgl-text>
