--- a/packages/rettangoli-ui/vt/specs/primitives/text/goto-text.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/text/goto-text.html
@@ -1,10 +1,10 @@
 ---
 title: "Goto Test"
 steps:
-  - goto https://yuusoft.com
+  - goto https://rettangoli.dev
   - wait 2000
   - screenshot
 ---
 <rtgl-view p="lg" ah="c" av="c" h="100vh">
-  <rtgl-text>This page will be replaced by Yuusoft page</rtgl-text>
+  <rtgl-text>This page will be replaced by Rettangoli page</rtgl-text>
 </rtgl-view>
