update the steps

--- a/packages/rettangoli-ui/vt/specs/primitives/button/select-and-click-nav.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/button/select-and-click-nav.html
@@ -1,8 +1,8 @@
 ---
 title: "VT Select, Click, and Navigate Test"
 steps:
-  - select nav-button
-  - click
+  - select nav-button:
+    - click
   - wait 2000
   - screenshot
 ---
