remove faulty colon

--- a/packages/rettangoli-ui/vt/specs/primitives/textarea/textarea-write-command.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/textarea/textarea-write-command.html
@@ -2,7 +2,7 @@
 title: "Textarea Write Command"
 steps:
   - select my-textarea:
-    - write: The write is working as expected as well
+    - write The write is working as expected as well
   - screenshot
 ---
 <rtgl-view p="lg" w="400">
