update the html

--- a/packages/rettangoli-ui/vt/specs/primitives/textarea/textarea-write-command.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/textarea/textarea-write-command.html
@@ -1,7 +1,7 @@
 ---
 title: "Textarea Write Command"
 steps:
-  - select my-textarea textarea:
+  - select my-textarea:
     - write The write is working as expected as well
   - screenshot
 ---
