--- a/packages/rettangoli-ui/vt/specs/primitives/dialog/open.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/dialog/open.html
@@ -1,5 +1,6 @@
 ---
 title: "Open"
+skipScreenshot: true
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="w">
   <rtgl-button id="button">Open Dialog</rtgl-button>
