--- a/packages/rettangoli-ui/vt/specs/primitives/dialog/size-lg.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/dialog/size-lg.html
@@ -1,5 +1,6 @@
 ---
 title: "Size Large"
+skipScreenshot: true
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="w">
   <rtgl-button id="button">Open Dialog s=lg</rtgl-button>
