--- a/packages/rettangoli-ui/vt/specs/primitives/dialog/size-md.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/dialog/size-md.html
@@ -1,5 +1,6 @@
 ---
 title: "Size Medium"
+skipScreenshot: true
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="w">
   <rtgl-button id="button">Open Dialog s=md</rtgl-button>
