--- a/packages/rettangoli-ui/vt/specs/primitives/image/image-full-w.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/image/image-full-w.html
@@ -3,9 +3,9 @@ title: "Image full width"
 ---
 
 <rtgl-view d="h" g="lg" p="lg" wh="f" fw="w">
-  <rtgl-view flex=1>
+  <rtgl-view w="1fg">
     <rtgl-image src="/public/sample1.jpg" w="f"></rtgl-image>
   </rtgl-view>
-  <rtgl-view flex=3>
+  <rtgl-view w="3fg">
   </rtgl-view>
 </rtgl-view>
