improve image css

--- a/packages/rettangoli-ui/vt/specs/primitives/image/image-border-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/image/image-border-01.html
@@ -3,5 +3,5 @@ title: Border
 ---
 <rtgl-view g="lg" p="lg" w="100vw" h="100vh" d="h">
     <rtgl-image w="200" src="/public/sample1.jpg"></rtgl-image>
-    <rtgl-image w="200" src="/public/sample1.jpg" bw="md" bc="p"></rtgl-image>
+    <rtgl-image w="200" src="/public/sample1.jpg" bw="lg" bc="p"></rtgl-image>
 </rtgl-view>
