--- a/packages/rettangoli-ui/vt/specs/primitives/image/image-object-fit-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/image/image-object-fit-01.html
@@ -3,24 +3,24 @@ title: Object Fit
 ---
 <rtgl-view g="lg" p="lg" wh="f">
     <rtgl-view d="h" g="lg">
-        <rtgl-image bgc="suc" wh="60" width="200" height="150" src="/public/sample1.jpg"></rtgl-image>
-        <rtgl-image bgc="suc" of="cov" wh="60" width="200" height="150" src="/public/sample1.jpg"></rtgl-image>
-        <rtgl-image bgc="suc" of="con" wh="60" width="200" height="150" src="/public/sample1.jpg"></rtgl-image>
-        <rtgl-image bgc="suc" of="none" wh="60" width="200" height="150" src="/public/sample1.jpg"></rtgl-image>
+        <rtgl-image bgc="suc" wh="60" src="/public/sample1.jpg"></rtgl-image>
+        <rtgl-image bgc="suc" of="cov" wh="60" src="/public/sample1.jpg"></rtgl-image>
+        <rtgl-image bgc="suc" of="con" wh="60" src="/public/sample1.jpg"></rtgl-image>
+        <rtgl-image bgc="suc" of="none" wh="60" src="/public/sample1.jpg"></rtgl-image>
     </rtgl-view>
 
     <rtgl-view d="h" g="lg">
-        <rtgl-image bgc="suc" w="50" h="100" width="200" height="150" src="/public/sample1.jpg"></rtgl-image>
-        <rtgl-image bgc="suc" of="cov" w="50" h="100" width="200" height="150" src="/public/sample1.jpg"></rtgl-image>
-        <rtgl-image bgc="suc" of="con" w="50" h="100" width="200" height="150" src="/public/sample1.jpg"></rtgl-image>
-        <rtgl-image bgc="suc" of="none" w="50" h="100" width="200" height="150" src="/public/sample1.jpg"></rtgl-image>
+        <rtgl-image bgc="suc" w="50" h="100" src="/public/sample1.jpg"></rtgl-image>
+        <rtgl-image bgc="suc" of="cov" w="50" h="100" src="/public/sample1.jpg"></rtgl-image>
+        <rtgl-image bgc="suc" of="con" w="50" h="100" src="/public/sample1.jpg"></rtgl-image>
+        <rtgl-image bgc="suc" of="none" w="50" h="100" src="/public/sample1.jpg"></rtgl-image>
     </rtgl-view>
 
 
     <rtgl-view d="h" g="lg">
-        <rtgl-image bgc="suc" w="100" h="50" width="200" height="150" src="/public/sample1.jpg"></rtgl-image>
-        <rtgl-image bgc="suc" of="cov" w="100" h="50" width="200" height="150" src="/public/sample1.jpg"></rtgl-image>
-        <rtgl-image bgc="suc" of="con" w="100" h="50" width="200" height="150" src="/public/sample1.jpg"></rtgl-image>
-        <rtgl-image bgc="suc" of="none" w="100" h="50" width="200" height="150" src="/public/sample1.jpg"></rtgl-image>
+        <rtgl-image bgc="suc" w="100" h="50" src="/public/sample1.jpg"></rtgl-image>
+        <rtgl-image bgc="suc" of="cov" w="100" h="50" src="/public/sample1.jpg"></rtgl-image>
+        <rtgl-image bgc="suc" of="con" w="100" h="50" src="/public/sample1.jpg"></rtgl-image>
+        <rtgl-image bgc="suc" of="none" w="100" h="50" src="/public/sample1.jpg"></rtgl-image>
     </rtgl-view>
 </rtgl-view>
