--- a/packages/rettangoli-ui/vt/specs/primitives/image/image-dimensions-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/image/image-dimensions-01.html
@@ -3,10 +3,8 @@ title: Dimensions
 ---
 <rtgl-view g="lg" p="lg" w="100vw" h="100vh" d="h">
     <rtgl-image src="/public/sample1.jpg"></rtgl-image>
-    <rtgl-image width="200" height="150" src="/public/sample1.jpg"></rtgl-image>
+    <rtgl-image w="200" h="150" src="/public/sample1.jpg"></rtgl-image>
     <rtgl-image w="200" src="/public/sample1.jpg"></rtgl-image>
     <rtgl-image w="100" src="/public/sample1.jpg"></rtgl-image>
-    <rtgl-image w="200" width="200" height="150" src="/public/sample1.jpg"></rtgl-image>
-    <rtgl-image w="100" width="200" height="150" src="/public/sample1.jpg"></rtgl-image>
-    <rtgl-image h="200" width="200" height="150" src="/public/sample1.jpg"></rtgl-image>
+    <rtgl-image h="200" src="/public/sample1.jpg"></rtgl-image>
 </rtgl-view>
