--- a/packages/rettangoli-ui/vt/specs/primitives/button/button-icon-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/button/button-icon-01.html
@@ -3,15 +3,16 @@ title: Icon
 ---
 
 <rtgl-view g="md" p="lg" wh="f"">
-    <rtgl-button icon="text" v="pr"></rtgl-button>
-    <rtgl-button icon="spinner" v="pr">Button</rtgl-button>
-    <rtgl-button icon="text" v="pr">Button</rtgl-button>
-    <rtgl-button icon="text" v="se"></rtgl-button>
-    <rtgl-button icon="text" v="se">Button</rtgl-button>
-    <rtgl-button icon="text" ip="s" s="sm">Left Icon</rtgl-button>
-    <rtgl-button icon="text" ip="s">Left Icon</rtgl-button>
-    <rtgl-button icon="text" ip="s" s="lg">Left Icon</rtgl-button>
-    <rtgl-button icon="text" s="sm">Right Icon</rtgl-button>
-    <rtgl-button icon="text">Right Icon</rtgl-button>
-    <rtgl-button icon="text" s="lg">Right Icon</rtgl-button>
+    <rtgl-button pre="text" v="pr"></rtgl-button>
+    <rtgl-button pre="spinner" v="pr">Button</rtgl-button>
+    <rtgl-button pre="text" v="pr">Button</rtgl-button>
+    <rtgl-button pre="text" v="se"></rtgl-button>
+    <rtgl-button pre="text" v="se">Button</rtgl-button>
+    <rtgl-button pre="text" s="sm">Left Icon</rtgl-button>
+    <rtgl-button pre="text">Left Icon</rtgl-button>
+    <rtgl-button pre="text" s="lg">Left Icon</rtgl-button>
+    <rtgl-button suf="text" s="sm">Right Icon</rtgl-button>
+    <rtgl-button suf="text">Right Icon</rtgl-button>
+    <rtgl-button suf="text" s="lg">Right Icon</rtgl-button>
+    <rtgl-button pre="text" suf="spinner">Both Icons</rtgl-button>
 </rtgl-view>
