--- a/packages/rettangoli-ui/vt/specs/primitives/input-number/input-number-disabled-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/input-number/input-number-disabled-01.html
@@ -3,7 +3,7 @@ title: Disabled
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="w">
   <rtgl-text>Disabled number input:</rtgl-text>
-  <rtgl-input-number id="disabled-input" disabled placeholder="Disabled number"></rtgl-input-number>
+  <rtgl-input-number id="disabled-input" dis placeholder="Disabled number"></rtgl-input-number>
   <rtgl-text>Regular number input:</rtgl-text>
   <rtgl-input-number id="regular-disabled-input" placeholder="Regular number"></rtgl-input-number>
 </rtgl-view>
