--- a/packages/rettangoli-ui/vt/specs/primitives/input/input-disabled-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/input/input-disabled-01.html
@@ -3,7 +3,7 @@ title: Disabled
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="w">
   <rtgl-text>Disabled</rtgl-text>
-  <rtgl-input disabled></rtgl-input>
+  <rtgl-input dis></rtgl-input>
   <rtgl-text>Not Disabled</rtgl-text>
   <rtgl-input></rtgl-input>
 </rtgl-view>
