--- a/packages/rettangoli-ui/vt/specs/primitives/slider/slider-disabled-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/slider/slider-disabled-01.html
@@ -2,5 +2,5 @@
 title: Disabled
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="w">
-  <rtgl-slider disabled value="50"></rtgl-slider>
+  <rtgl-slider dis value="50"></rtgl-slider>
 </rtgl-view>
