--- a/packages/rettangoli-ui/vt/specs/primitives/button/button-disabled-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/button/button-disabled-01.html
@@ -4,7 +4,7 @@ title: Disabled
 
 <rtgl-view g="md" p="lg" wh="f"">
     <rtgl-text>Disabled</rtgl-text>
-    <rtgl-button dis>Button</rtgl-button>
+    <rtgl-button disabled>Button</rtgl-button>
     <rtgl-text>Not Disabled</rtgl-text>
     <rtgl-button>Button</rtgl-button>
 </rtgl-view>
