--- a/packages/rettangoli-ui/vt/specs/primitives/colorPicker/colorPicker-disabled-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/colorPicker/colorPicker-disabled-01.html
@@ -2,5 +2,5 @@
 title: Disabled
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="w">
-  <rtgl-color-picker dis></rtgl-color-picker>
+  <rtgl-color-picker disabled></rtgl-color-picker>
 </rtgl-view>
