--- a/packages/rettangoli-ui/vt/specs/primitives/dialog/with-form.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/dialog/with-form.html
@@ -28,21 +28,21 @@ const dialog = document.getElementById('dialog');
     fields: [{
       id: 'name',
       fieldName: 'name',
-      inputType: 'inputText',
+      inputType: 'input-text',
       label: 'Full Name',
       description: 'Enter your full name',
       placeholder: 'John Doe'
     }, {
       id: 'email',
       fieldName: 'email',
-      inputType: 'inputText',
+      inputType: 'input-text',
       label: 'Email Address',
       description: 'Enter your email address',
       placeholder: 'john@example.com'
     }, {
       id: 'favoriteColor',
       fieldName: 'favoriteColor',
-      inputType: 'colorPicker',
+      inputType: 'color-picker',
       label: 'Favorite Color',
       description: 'Pick your favorite color',
       value: '#3498db'
