Improve view/text/image primitives and docs

--- a/packages/rettangoli-ui/vt/specs/primitives/text/text-text-align-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/text/text-text-align-01.html
@@ -3,27 +3,27 @@ title: Text Align
 ---
 
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
-  <rtgl-view bgc="suc" p="md" w="300">
+  <rtgl-view bgc="mu" p="md" w="300">
     <rtgl-text>
       Lorem ipsum dolor sit, amet consectetur adipisicing elit.
     </rtgl-text>
   </rtgl-view>
-  <rtgl-view bgc="suc" p="md" w="300">
+  <rtgl-view bgc="mu" p="md" w="300">
     <rtgl-text ta="s">
       Lorem ipsum dolor sit, amet consectetur adipisicing elit.
     </rtgl-text>
   </rtgl-view>
-  <rtgl-view bgc="suc" p="md" w="300">
+  <rtgl-view bgc="mu" p="md" w="300">
     <rtgl-text ta="c">
       Lorem ipsum dolor sit, amet consectetur adipisicing elit.
     </rtgl-text>
   </rtgl-view>
-  <rtgl-view bgc="suc" p="md" w="300">
+  <rtgl-view bgc="mu" p="md" w="300">
     <rtgl-text ta="j">
       Lorem ipsum dolor sit, amet consectetur adipisicing elit.
     </rtgl-text>
   </rtgl-view>
-  <rtgl-view bgc="suc" p="md" w="300">
+  <rtgl-view bgc="mu" p="md" w="300">
     <rtgl-text ta="e">
       Lorem ipsum dolor sit, amet consectetur adipisicing elit.
     </rtgl-text>
