--- a/packages/rettangoli-ui/vt/specs/primitives/text/text-ellipsis-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/text/text-ellipsis-01.html
@@ -2,8 +2,8 @@
 title: Ellipsis
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
-    <rtgl-view bgc="su" p="md" g="lg">
-        <rtgl-text s="bl" c="on-su-v" w="140">Some text and some other text with ellipsis</rtgl-text>
-        <rtgl-text s="bl" c="on-su-v" ellipsis w="140">Some text and some other text with ellipsis</rtgl-text>
+    <rtgl-view bgc="mu" p="md" g="lg">
+        <rtgl-text c="mu" w="140">Some text and some other text with ellipsis</rtgl-text>
+        <rtgl-text c="mu" ellipsis w="140">Some text and some other text with ellipsis</rtgl-text>
     </rtgl-view>
 </rtgl-view>
