--- a/packages/rettangoli-ui/vt/specs/primitives/text/text-text-style-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/text/text-text-style-01.html
@@ -2,7 +2,7 @@
 title: Style
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
-    <rtgl-view bgc="su" p="md">
+    <rtgl-view bgc="mu" p="md">
         <rtgl-text> Start text <b>Bold</b> end text </rtgl-text>
         <rtgl-text> Start text <i> Italic </i> end text</rtgl-text>
         <rtgl-text> Start text <u>Underline</u> end text </rtgl-text>
