--- a/packages/rettangoli-ui/vt/specs/primitives/input/input-types-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/input/input-types-01.html
@@ -2,16 +2,8 @@
 title: Types
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
-  <rtgl-text>email</rtgl-text>
-  <rtgl-input type="email" ></rtgl-input>
+  <rtgl-text>text (default)</rtgl-text>
+  <rtgl-input></rtgl-input>
   <rtgl-text>password</rtgl-text>
-  <rtgl-input type="password" ></rtgl-input>
-  <rtgl-text>number</rtgl-text>
-  <rtgl-input type="number" ></rtgl-input>
-  <rtgl-text>tel</rtgl-text>
-  <rtgl-input type="tel" ></rtgl-input>
-  <rtgl-text>url</rtgl-text>
-  <rtgl-input type="url" ></rtgl-input>
-  <rtgl-text>text</rtgl-text>
-  <rtgl-input type="text" ></rtgl-input>
+  <rtgl-input type="password"></rtgl-input>
 </rtgl-view>
